--- a/source/0.4/src/main/webapp/index.xhtml
+++ b/source/0.4/src/main/webapp/index.xhtml
@@ -17,7 +17,9 @@
   <div id="header" class="header w3-container w3-row w3-cell-row w3-bar w3-teal w3-card">
     <div class="w3-container w3-cell w3-mobile w3-content w3-margin w3-third"></div>
     <div class="w3-conatiner w3-cell w3-mobile w3-content w3-margin w3-third">
-      <a href="index.xhtml"><button class="w3-button w3-white w3-round-xxlarge"><h1>myRX</h1></button></a>
+      <a href="index.xhtml">
+        <div class="w3-white w3-round-xxlarge"><div class="w3-blue w3-round-xxlarge"><h1><i><b>my</b></i></h1></div><h1>Rx</h1></div>
+      </a>
       <h2>Online Medication List</h2>
     </div>
     <div class="w3-container w3-cell w3-mobile w3-content w3-margin w3-third"></div>
