--- a/source/0.4/src/main/webapp/index.xhtml
+++ b/source/0.4/src/main/webapp/index.xhtml
@@ -18,7 +18,7 @@
     <div class="w3-container w3-cell w3-mobile w3-content w3-margin w3-third"></div>
     <div class="w3-conatiner w3-cell w3-mobile w3-content w3-margin w3-third">
       <a href="index.xhtml">
-        <div class="w3-white w3-round-xxlarge"><div class="w3-blue w3-round-xxlarge"><h1><i><b>my</b></i></h1></div><h1>Rx</h1></div>
+        <h:graphicImage url="/resources/myRx.PNG"/>
       </a>
       <h2>Online Medication List</h2>
     </div>
