--- a/source/0.4/src/main/webapp/provider-patients.xhtml
+++ b/source/0.4/src/main/webapp/provider-patients.xhtml
@@ -80,38 +80,35 @@
     </div>
     
     <div id="middle" class="w3-container w3-mobile w3-card">
-
       <h:dataTable id="providerPatientTable" value="#{beanDButil.getPatients(beanProvider.username)}" var="patient" class="w3-table-all w3-responsive">
         <h:column>
-          <f:facet name="header">Last Name</f:facet>
-          #{patient.lastName}
+          <f:facet name="header">Last Name</f:facet>#{patient.lastName}
+          <f:facet name="header">First Name</f:facet>#{patient.firstName}
+          <f:facet name="header">MI</f:facet>#{patient.middleInitial}
+          <f:facet name="header">Sex</f:facet>#{patient.sex}
+          <f:facet name="header">Email</f:facet><h:outputLink value="mailto:#{patient.email}">#{patient.email}</h:outputLink>
+          <f:facet name="header">Physical Address</f:facet>#{patient.address}
+          <f:facet name="header">Phone</f:facet><h:outputLink value="tel:#{patient.phone}">${patient.phone}</h:outputLink>
         </h:column>
         <h:column>
-          <f:facet name="header">First Name</f:facet>
-          #{patient.firstName}
-        </h:column>
-        <h:column>
-          <f:facet name="header">MI</f:facet>
-          #{patient.middleInitial}
-        </h:column>
-        <h:column>
-          <f:facet name="header">Sex</f:facet>
-          #{patient.sex}
-        </h:column>
-        <h:column>
-          <f:facet name="header">Email</f:facet>
-          <h:outputLink value="mailto:#{patient.email}">
-          #{patient.email}
-          </h:outputLink>
-        </h:column>
-        <h:column>
-          <f:facet name="header">Physical Address</f:facet>
-          #{patient.address}
-        </h:column>
-        <h:column>
-          <f:facet name="header">Phone</f:facet>
-					<h:outputLink value="tel:#{patient.phone}">${patient.phone}</h:outputLink>
-        </h:column>
+					<h:dataTable value="#{beanDButil.getMedications(patient.username)}" var="med" class="w3-table-all w3-responsive">
+						</h:column>
+							<f:facet name="header"><label class="w3-blue">Name</label></f:facet>#{med.name}
+						</h:column>
+						<h:column>
+							<f:facet name="header"><label class="w3-blue">Dosage</label></f:facet>#{med.dosage}
+						</h:column>
+						<h:column>
+							<f:facet name="header"><label class="w3-blue">Unit</label></f:facet>#{med.doseUnit}
+						</h:column>
+						<h:column>
+							<f:facet name="header"><label class="w3-blue">Issued</label></f:facet>#{med.issueDate}
+						</h:column>
+						<h:column>
+							<f:facet name="header"><label class="w3-blue">Expires</label></f:facet>#{med.expDate}
+						</h:column>
+					</h:dataTable>
+				</h:column>
         <h:column>
           <f:facet name="header">Medications</f:facet>
           <h:commandButton action="#{beanDButil.setPatient(patient.username)}" label="VIEW" onclick="document.getElementById('modalPatientMeds').style.display='block'" class="w3-button w3-green" />
