--- a/source/0.4/src/main/webapp/provider-patients.xhtml
+++ b/source/0.4/src/main/webapp/provider-patients.xhtml
@@ -109,6 +109,7 @@
 						</h:column>
 					</h:dataTable>
 				</h:column>
+			</h:dataTable>
         <h:column>
           <f:facet name="header">Medications</f:facet>
           <h:commandButton action="#{beanDButil.setPatient(patient.username)}" label="VIEW" onclick="document.getElementById('modalPatientMeds').style.display='block'" class="w3-button w3-green" />
