--- a/source/0.4/src/main/webapp/provider-patients.xhtml
+++ b/source/0.4/src/main/webapp/provider-patients.xhtml
@@ -83,84 +83,36 @@
       <h:dataTable id="providerPatientTable" value="#{beanDButil.getPatients(beanProvider.username)}" var="patient" class="w3-table-all w3-responsive">
         <h:column>
           <f:facet name="header">Last Name</f:facet>#{patient.lastName}
+					</h:column>
+        <h:column>
           <f:facet name="header">First Name</f:facet>#{patient.firstName}
+					</h:column>
+        <h:column>
           <f:facet name="header">MI</f:facet>#{patient.middleInitial}
+					</h:column>
+        <h:column>
           <f:facet name="header">Sex</f:facet>#{patient.sex}
+					</h:column>
+        <h:column>
           <f:facet name="header">Email</f:facet><h:outputLink value="mailto:#{patient.email}">#{patient.email}</h:outputLink>
+					</h:column>
+        <h:column>
           <f:facet name="header">Physical Address</f:facet>#{patient.address}
+					</h:column>
+        <h:column>
           <f:facet name="header">Phone</f:facet><h:outputLink value="tel:#{patient.phone}">${patient.phone}</h:outputLink>
         </h:column>
         <h:column>
           <f:facet name="header">Medications</f:facet>
-          <h:commandButton action="#{beanDButil.setPatient(patient.username)}" label="VIEW" onclick="document.getElementById('modalPatientMeds').style.display='block'" class="w3-button w3-green" />
+          <h:commandButton action="#{beanDButil.viewPatientMeds(patient.username)}" label="VIEW" class="w3-button w3-green" />
         </h:column>
-				<h:column><h:outputLink value="provider-patient-meds.xhtml">
-					<h:commandButton action="#{beanDButil.setPatient(patient.username)}" label="View" type="button" class="w3-button w3-blue w3-round-xxlarge" /></h:outputLink>
-				</h:column>
       </h:dataTable>
-			<div id="modalPatientMeds" class="w3-modal">
-        <div class="w3-modal-content w3-card w3-animate-zoom">
-          <button onclick="document.getElementById('modalPatientMeds').style.display='none'" class="w3-button w3-red w3-display-topright">X</button>
-					<div class="w3-container"><h2>#{beanDButil.patient}</h2></div>
-					<h:dataTable value="#{beanDButil.getMedications(beanDButil.patient)}" var="med" class="w3-table-all w3-responsive">
-						<h:column><f:facet name="header">
-							<label class="w3-blue">Name</label></f:facet>
-							#{med.name}
-						</h:column>
-						<h:column><f:facet name="header">
-							<label class="w3-blue">Dosage</label></f:facet>
-							#{med.dosage}
-						</h:column>
-						<h:column><f:facet name="header">
-							<label class="w3-blue">Unit</label></f:facet>
-							#{med.doseUnit}
-						</h:column>
-						<h:column><f:facet name="header">
-							<label class="w3-blue">Issued</label></f:facet>
-							#{med.issueDate}
-						</h:column>
-						<h:column><f:facet name="header">
-							<label class="w3-blue">Expires</label></f:facet>
-							#{med.expDate}
-						</h:column>
-					</h:dataTable>
-          <h:form id="add-med-form" class="w3-container">
-					  <h:column><f:facet name="header"><label class="w3-text-blue">Name</label></f:facet>
-              <h:inputText id="medName" value="#{beanDButil.name}" class="w3-input w3-border"></h:inputText>
-						</h:column>
-						<h:column><f:facet name="header"><label class="w3-text-blue">Dosage</label></f:facet>
-              <h:inputText id="medDosage" value="#{beanDButil.dosage}" class="w3-input w3-border"></h:inputText>
-						</h:column>
-						<h:column><f:facet name="header"><label class="w3-text-blue">Unit</label></f:facet>
-              <h:selectOneMenu id="medDoseUnit" value="#{beanDButil.doseUnit}" class="w3-input w3-border">
-								<f:selectItem itemValue="g" itemLabel="gram" />
-								<f:selectItem itemValue="mg" itemLabel="milligram" />
-								<f:selectItem itemValue="mcg" itemLabel="microgram" />
-							</h:selectOneMenu>
-						</h:column>
-						<h:column><f:facet name="header"><label class="w3-text-blue">Issued</label></f:facet>
-              <h:inputText id="medIssueDate" value="#{beanDButil.issueDate}" class="w3-input w3-border"></h:inputText>
-						</h:column>
-						<h:column><f:facet name="header"><label class="w3-text-blue">Expires</label></f:facet>
-              <h:inputText id="medExpDate" value="#{beanDButil.expDate}" class="w3-input w3-border"></h:inputText>
-						</h:column>
-						<h:column><h:commandButton value="ADD" action="#{beanDButil.addMedication()}" class="w3-button w3-teal"></h:commandButton>
-              <button class="w3-button w3-teal">RESET</button>
-	            <button onclick="document.getElementById('modalPatientMeds').style.display='none'" class="w3-button w3-red">CLOSE</button>
-						</h:column>
-          </h:form>
-        </div>
-      </div>
 		</div>
 
     <div id="bottom" class="w3-container w3-mobile w3-card w3-teal">
       <div class="w3-container w3-bar w3-mobile w3-row w3-padding">
         <a href="index.xhtml">
           <div class="w3-container w3-center w3-col s3 m3 l3"><button class="w3-button w3-white w3-round-xxlarge">HOME</button>
-          </div>
-        </a>
-        <a href="patient-profile.xhtml">
-          <div class="w3-container w3-center w3-col s3 m3 l3"><button class="w3-button w3-white w3-round-xxlarge">PROFILE-PAGE</button>
           </div>
         </a>
       </div>
