--- a/source/0.4/src/main/webapp/provider-patients.xhtml
+++ b/source/0.4/src/main/webapp/provider-patients.xhtml
@@ -27,17 +27,16 @@
               <span onclick="document.getElementById('modalProviderProfile').style.display='none'" class="w3-button w3-red w3-display-topright">&times;</span>
               <h:form id="user-profile-form" class="w3-container">
         			<h:dataTable value="#{beanDButil.getProvider(beanProvider.username)}" var="pr" class="w3-table-all w3-responsive">
-					    	<h:column class="w3-blue"><f:facet name="header"><label class="w3-text-blue">Username</label></f:facet><h3>#{beanProvider.username}</h3></h:column>
-								<h:column class="w3-blue"><f:facet name="header"><label class="w3-text-blue">Email</label></f:facet>#{pr.email}</h:column>
-						  	<h:column class="w3-blue"><f:facet name="header"><label class="w3-text-blue">First Name</label></f:facet>#{pr.firstName}</h:column>
-								<h:column class="w3-blue"><f:facet name="header"><label class="w3-text-blue">MI</label></f:facet>#{pr.middleInitial}</h:column>
-								<h:column class="w3-blue"><f:facet name="header"><label class="w3-text-blue">Last Name</label></f:facet>#{pr.lastName}</h:column>
-							</h:dataTable><h:dataTable value="#{beanDButil.getPatient(beanProvider.username)}" var="pr" class="w3-table-all">
-								<h:column class="w3-blue"><f:facet name="header"><label class="w3-text-blue">Token</label></f:facet>#{pr.token}</h:column>
-								<h:column class="w3-blue"><f:facet name="header"><label class="w3-text-blue">Sex</label></f:facet>#{pr.sex}</h:column>
-								<h:column class="w3-blue"><f:facet name="header"><label class="w3-text-blue">Phone</label></f:facet>#{pr.phone}</h:column>
-								<h:column class="w3-blue"><f:facet name="header"><label class="w3-text-blue">Address</label></f:facet>#{pr.address}</h:column>
-							</h:dataTable><h:dataTable value="#{beanDButil.getProvider(beanProvider.username)}" var="pr" class="w3-table-all">
+					    	<h:column><f:facet name="header" class="w3-blue"><label>Username</label></f:facet><p>#{beanProvider.username}</p></h:column>
+								<h:column><f:facet name="header" class="w3-blue"><label>Email</label></f:facet>#{pr.email}</h:column>
+						  	<h:column><f:facet name="header" class="w3-blue"><label>First Name</label></f:facet>#{pr.firstName}</h:column>
+								<h:column><f:facet name="header" class="w3-blue"><label>MI</label></f:facet>#{pr.middleInitial}</h:column>
+								<h:column><f:facet name="header" class="w3-blue"><label>Last Name</label></f:facet>#{pr.lastName}</h:column>
+								<h:column><f:facet name="header" class="w3-blue"><label>Token</label></f:facet>#{pr.token}</h:column>
+								<h:column><f:facet name="header" class="w3-blue"><label>Sex</label></f:facet>#{pr.sex}</h:column>
+								<h:column><f:facet name="header" class="w3-blue"><label>Phone</label></f:facet>#{pr.phone}</h:column>
+								<h:column><f:facet name="header" class="w3-blue"><label>Address</label></f:facet>#{pr.address}</h:column>
+							</h:dataTable><h:dataTable value="#{beanDButil.getProvider(beanProvider.username)}" var="pr" class="w3-table-all w3-responsive">
 								<h:column class="w3-blue"><f:facet name="header"><label class="w3-text-blue">Username</label></f:facet>
 									<h:inputText value="#{beanDButil.username}" required="true" class="w3-input w3-border" /></h:column>
 								<h:column class="w3-blue"><f:facet name="header"><label class="w3-text-blue">Email</label></f:facet>
@@ -105,9 +104,14 @@
           <f:facet name="header">Phone</f:facet><h:outputLink value="tel:#{patient.phone}">${patient.phone}</h:outputLink>
         </h:column>
         <h:column>
-          <f:facet name="header">Medications</f:facet><h:outputLink value="patient-provider-meds.xhtml">
-          <h:commandButton action="#{beanDButil.viewPatientMeds(patient.username)}" value="VIEW" class="w3-button w3-green"></h:commandButton></h:outputLink>
+          <f:facet name="header">Medications</f:facet>
+          <h:commandButton action="#{beanDButil.viewPatientMeds(patient.username)}" value="VIEW" class="w3-button w3-green"></h:commandButton>
         </h:column>
+				<h:column>
+					<a href="provider-patient.meds.xhtml.xhtml">
+    	      <div class="w3-container w3-center w3-col s3 m3 l3"><button class="w3-button w3-white w3-round-xxlarge">Meds</button></div>
+	        </a>
+				</h:column>
       </h:dataTable>
 		</div>
 
