--- a/source/0.4/src/main/webapp/provider-patients.xhtml
+++ b/source/0.4/src/main/webapp/provider-patients.xhtml
@@ -105,10 +105,10 @@
         </h:column>
         <h:column>
           <f:facet name="header">Medications</f:facet>
-          <h:commandButton action="#{beanDButil.viewPatientMeds(patient.username)}" value="VIEW" class="w3-button w3-green"></h:commandButton>
+          <h:commandButton action="#{beanDButil.viewPatientMeds()}" value="VIEW" class="w3-button w3-green"></h:commandButton>
         </h:column>
 				<h:column>
-					<a href="provider-patient.meds.xhtml.xhtml">
+					<a href="provider-patient.meds.xhtml">
     	      <div class="w3-container w3-center w3-col s3 m3 l3"><button class="w3-button w3-white w3-round-xxlarge">Meds</button></div>
 	        </a>
 				</h:column>
