--- a/source/0.4/src/main/webapp/provider-patients.xhtml
+++ b/source/0.4/src/main/webapp/provider-patients.xhtml
@@ -104,10 +104,10 @@
           <f:facet name="header">Phone</f:facet><h:outputLink value="tel:#{patient.phone}">${patient.phone}</h:outputLink>
         </h:column>
         <h:column>
-          #{beanDButil.getMedications(patient.username,beanProvider.username)}
+          #{beanDButil.getMedications(patient.username,patient.provider)}
         </h:column>
 				<h:column>
-					<a href="provider-patient.meds.xhtml">
+					<a href="provider-patient-meds.xhtml">
     	      <div class="w3-container w3-center w3-col s3 m3 l3"><button class="w3-button w3-white w3-round-xxlarge">Meds</button></div>
 	        </a>
 				</h:column>
