--- a/source/0.4/src/main/webapp/provider-meds.xhtml
+++ b/source/0.4/src/main/webapp/provider-meds.xhtml
@@ -181,16 +181,31 @@
 					</h:column>
 				</h:dataTable>
 			</h:form>
+			<h:form>
+				<h:dataTable value="#{beanDButil}" class="w3-table-all w3-responsive">
+					<h:column>
+						<f:facet name="header"><label class="w3-text-blue">First Name</label></f:facet>
+						<h:inputText value="#{beanDButil.firstName}" class="w3-input" />
+					</h:column>
+					<h:column>
+						<f:facet name="header"><label class="w3-text-blue">Last Name</label></f:facet>
+						<h:inputText value="#{beanDButil.lastName}" class="w3-input" />
+					</h:column>
+					<h:column>
+						<f:facet name="header"><label class="w3-text-blue">Provider Username</label></f:facet>
+						<h:inputText value="#{beanDButil.provider}" class="w3-input" />
+					</h:column>
+					<h:column>
+						<h:commandButton value="DEL PATIENT" action="#{beanDButil.delProviderPatient()}" class="w3-button w3-green"></h:commandButton>
+					</h:column>
+				</h:dataTable>
+			</h:form>
 		</div>
 
     <div id="bottom" class="w3-container w3-mobile w3-card w3-teal">
       <div class="w3-container w3-bar w3-mobile w3-row w3-padding">
         <a href="index.xhtml">
           <div class="w3-container w3-center w3-col s3 m3 l3"><button class="w3-button w3-white w3-round-xxlarge">HOME</button>
-          </div>
-        </a>
-        <a href="provider-profile.xhtml">
-          <div class="w3-container w3-center w3-col s3 m3 l3"><button class="w3-button w3-white w3-round-xxlarge">PROFILE-PAGE</button>
           </div>
         </a>
       </div>
