--- a/source/0.4/src/main/webapp/provider-meds.xhtml
+++ b/source/0.4/src/main/webapp/provider-meds.xhtml
@@ -20,9 +20,9 @@
     
       <div class="w3-container w3-mobile w3-row w3-padding">
         <div class="w3-container w3-center w3-col s4 m4 l4">
-          <button onclick="document.getElementById('modalPatientProfile').style.display='block'" class="w3-button w3-green w3-round-xxlarge">
+          <button onclick="document.getElementById('modalProviderProfile').style.display='block'" class="w3-button w3-green w3-round-xxlarge">
           #{beanProvider.username}</button>
-          <div id="modalPatientProfile" class="w3-modal">
+          <div id="modalProviderProfile" class="w3-modal">
             <div class="w3-modal-content w3-container w3-card w3-animate-zoom">
               <span onclick="document.getElementById('modalProviderProfile').style.display='none'" class="w3-button w3-red w3-display-topright">&times;</span>
               <h:form id="user-profile-form" class="w3-container">
@@ -177,7 +177,7 @@
 						<h:inputText value="#{beanDButil.provider}" class="w3-input" />
 					</h:column>
 					<h:column>
-						<h:commandButton value="ADD PATIENT" action="#{beanDButil.addProviderPatient()}" class="w3-button w3-green"></h:commandButton>
+						<h:commandButton value="ADD PATIENT" action="#{beanDButil.addPatientProvider()}" class="w3-button w3-green"></h:commandButton>
 					</h:column>
 				</h:dataTable>
 			</h:form>
