--- a/source/0.4/src/main/webapp/provider-meds.xhtml
+++ b/source/0.4/src/main/webapp/provider-meds.xhtml
@@ -177,7 +177,7 @@
 						<h:inputText value="#{beanDButil.provider}" class="w3-input" />
 					</h:column>
 					<h:column>
-						<h:commandButton value="ADD PATIENT" action="#{beanDButil.addPatientProvider()}" class="w3-button w3-green"></h:commandButton>
+						<h:commandButton value="ADD PATIENT" action="#{beanDButil.addProviderPatient()}" class="w3-button w3-green"></h:commandButton>
 					</h:column>
 				</h:dataTable>
 			</h:form>
