--- a/source/0.4/src/main/webapp/provider-meds.xhtml
+++ b/source/0.4/src/main/webapp/provider-meds.xhtml
@@ -162,6 +162,7 @@
       </h:form>
 		</div>
 		<div>
+			<div class="w3-container w3-mobile w3-card">
 			<h:form>
 				<h:dataTable value="#{beanDButil}" class="w3-table-all w3-responsive">
 					<h:column>
@@ -181,6 +182,8 @@
 					</h:column>
 				</h:dataTable>
 			</h:form>
+			</div>
+			<div class="w3-container w3-mobile w3-card">
 			<h:form>
 				<h:dataTable value="#{beanDButil}" class="w3-table-all w3-responsive">
 					<h:column>
@@ -200,6 +203,7 @@
 					</h:column>
 				</h:dataTable>
 			</h:form>
+		</div>
 		</div>
 
     <div id="bottom" class="w3-container w3-mobile w3-card w3-teal">
